Fixed typewriter effect fro first visit and return users - marathon all day bug fix - added, letter flicker hook

--- a/src/Components/SortBar/RatingsKey/RatingsKey.css
+++ b/src/Components/SortBar/RatingsKey/RatingsKey.css
@@ -1,5 +1,5 @@
 .ratings-key__wrapper {
-    position: end;
+    position: relative;
 }
 
 .ratings-key__names {
